Feat(eos_cli_config_gen): Add support for permit response traffic nat under ip acls (#4128)
Co-authored-by: Claus Holbech <holbech@arista.com>

--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/access-lists.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/documentation/access-lists.j2
@@ -22,6 +22,9 @@ ACL has counting mode `counters per-entry` enabled!
 {%         for sequence in access_list.sequence_numbers | arista.avd.natural_sort('sequence') %}
 | {{ sequence.sequence }} | {{ sequence.action }} |
 {%         endfor %}
+{%         if access_list.permit_response_traffic is arista.avd.defined %}
+| - | permit response traffic {{ access_list.permit_response_traffic }} |
+{%         endif %}
 
 {%     endfor %}
 #### Extended Access-lists Device Configuration
