--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/port-channel-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/port-channel-interfaces.j2
@@ -128,7 +128,7 @@ interface {{ port_channel_interface.name }}
 {%     if port_channel_interface.switchport.mode is arista.avd.defined %}
    switchport mode {{ port_channel_interface.switchport.mode }}
 {%     endif %}
-{%     if ethernet_interface.switchport.vlan_forwarding_accept_all is arista.avd.defined(true) %}
+{%     if port_channel_interface.switchport.vlan_forwarding_accept_all is arista.avd.defined(true) %}
    switchport vlan forwarding accept all
 {%     endif %}
 {%     for trunk_group in port_channel_interface.switchport.trunk.groups | arista.avd.natural_sort %}
@@ -137,8 +137,8 @@ interface {{ port_channel_interface.name }}
 {%     if port_channel_interface.switchport.enabled is arista.avd.defined(false) %}
    no switchport
 {%     endif %}
-{%     if ethernet_interface.switchport.source_interface is arista.avd.defined %}
-   switchport source-interface {{ ethernet_interface.switchport.source_interface }}
+{%     if port_channel_interface.switchport.source_interface is arista.avd.defined %}
+   switchport source-interface {{ port_channel_interface.switchport.source_interface }}
 {%     endif %}
 {%     for vlan_translation in port_channel_interface.switchport.vlan_translations | arista.avd.natural_sort('direction') %}
 {%         if vlan_translation.from is arista.avd.defined and vlan_translation.to is arista.avd.defined %}
@@ -157,9 +157,9 @@ interface {{ port_channel_interface.name }}
    switchport pvlan mapping {{ port_channel_interface.switchport.pvlan_mapping }}
 {%     endif %}
 {%     if port_channel_interface.switchport.backup_link.interface is arista.avd.defined %}
-{%         set backup_link_cli = "switchport backup-link " ~ ethernet_interface.switchport.backup_link.interface %}
-{%         if ethernet_interface.switchport.backup_link.prefer_vlan is arista.avd.defined %}
-{%             set backup_link_cli = backup_link_cli ~ " prefer vlan " ~ ethernet_interface.switchport.backup_link.prefer_vlan %}
+{%         set backup_link_cli = "switchport backup-link " ~ port_channel_interface.switchport.backup_link.interface %}
+{%         if port_channel_interface.switchport.backup_link.prefer_vlan is arista.avd.defined %}
+{%             set backup_link_cli = backup_link_cli ~ " prefer vlan " ~ port_channel_interface.switchport.backup_link.prefer_vlan %}
 {%         endif %}
    {{ backup_link_cli }}
 {%         if port_channel_interface.switchport.backup.preemption_delay is arista.avd.defined %}
