--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/ethernet-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/ethernet-interfaces.j2
@@ -174,11 +174,17 @@ interface {{ ethernet_interface.name }}
 {%     if ethernet_interface.switchport.phone.trunk is arista.avd.defined %}
    switchport phone trunk {{ ethernet_interface.switchport.phone.trunk }}
 {%     endif %}
+{%     if ethernet_interface.switchport.dot1q.vlan_tag is arista.avd.defined %}
+   switchport dot1q vlan tag {{ ethernet_interface.switchport.dot1q.vlan_tag }}
+{%     endif %}
 {%     if ethernet_interface.switchport.trunk.allowed_vlans is arista.avd.defined %}
    switchport trunk allowed vlan {{ ethernet_interface.switchport.trunk.allowed_vlans }}
 {%     endif %}
 {%     if ethernet_interface.switchport.mode is arista.avd.defined %}
    switchport mode {{ ethernet_interface.switchport.mode }}
+{%     endif %}
+{%     if ethernet_interface.switchport.dot1q.ethertype is arista.avd.defined %}
+   switchport dot1q ethertype {{ ethernet_interface.switchport.dot1q.ethertype }}
 {%     endif %}
 {%     if ethernet_interface.switchport.vlan_forwarding_accept_all is arista.avd.defined(true) %}
    switchport vlan forwarding accept all
