Feat(eos_cli_config_gen): Add switchport 'tap' and 'tool' mode config to data-model

--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/ethernet-interfaces.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos/ethernet-interfaces.j2
@@ -160,6 +160,98 @@ interface {{ ethernet_interface.name }}
 {%     if ethernet_interface.pvlan_mapping is arista.avd.defined %}
    switchport pvlan mapping {{ ethernet_interface.pvlan_mapping }}
 {%     endif %}
+{%     if ethernet_interface.switchport.tap.native_vlan is arista.avd.defined %}
+   switchport tap native vlan {{ ethernet_interface.switchport.tap.native_vlan }}
+{%     endif %}
+{%     if ethernet_interface.switchport.tap.identity.port_id is arista.avd.defined %}
+{%         set tap_identity_cli = "switchport tap identity " ~ ethernet_interface.switchport.tap.identity.port_id %}
+{%         if ethernet_interface.switchport.tap.identity.inner_port_id is arista.avd.defined %}
+{%             set tap_identity_cli = tap_identity_cli ~ " inner " ~ ethernet_interface.switchport.tap.identity.inner_port_id %}
+{%         endif %}
+   {{ tap_identity_cli }}
+{%     endif %}
+{%     if ethernet_interface.switchport.tap.mac_address.dest is arista.avd.defined %}
+{%         set tap_mac_address_cli = "switchport tap mac-address dest " ~ ethernet_interface.switchport.tap.mac_address.dest %}
+{%         if ethernet_interface.switchport.tap.mac_address.src is arista.avd.defined %}
+{%             set tap_mac_address_cli = tap_mac_address_cli ~ " src " ~ ethernet_interface.switchport.tap.mac_address.src %}
+{%         endif %}
+   {{ tap_mac_address_cli }}
+{%     endif %}
+{%     if ethernet_interface.switchport.tap.encapsulation.vxlan_strip is arista.avd.defined(true) %}
+   switchport tap encapsulation vxlan strip
+{%     endif %}
+{%     if ethernet_interface.switchport.tap.encapsulation.gre_strip is arista.avd.defined(true) %}
+   switchport tap encapsulation gre strip
+{%     endif %}
+{%     if ethernet_interface.switchport.tap.encapsulation.gre.destination is arista.avd.defined or
+         ethernet_interface.switchport.tap.encapsulation.gre.protocol is arista.avd.defined %}
+{%         if ethernet_interface.switchport.tap.encapsulation.gre.destination is arista.avd.defined %}
+{%             set tap_encapsulation_cli = "switchport tap encapsulation gre destination " ~ ethernet_interface.switchport.tap.encapsulation.gre.destination %}
+{%             if ethernet_interface.switchport.tap.encapsulation.gre.source is arista.avd.defined %}
+{%                 set tap_encapsulation_cli = tap_encapsulation_cli ~ " source " ~ ethernet_interface.switchport.tap.encapsulation.gre.source %}
+{%             endif %}
+{%         endif %}
+{%         if ethernet_interface.switchport.tap.encapsulation.gre.protocol is arista.avd.defined %}
+{%             set tap_encapsulation_cli = tap_encapsulation_cli ~ " protocol " ~ ethernet_interface.switchport.tap.encapsulation.gre.protocol %}
+{%             if ethernet_interface.switchport.tap.encapsulation.gre.feature_header_length is arista.avd.defined %}
+{%                 set tap_encapsulation_cli = tap_encapsulation_cli ~ " feature header length " ~ ethernet_interface.switchport.tap.encapsulation.gre.feature_header_length %}
+{%             endif %}
+{%         endif %}
+   {{ tap_encapsulation_cli }} strip
+{%     endif %}
+{%     if ethernet_interface.switchport.tool.mpls_pop_all is arista.avd.defined(true) %}
+   switchport tool mpls pop all
+{%     endif %}
+{%     if ethernet_interface.switchport.tool.encapsulation.vn_tag_strip is arista.avd.defined(true) %}
+   switchport tool encapsulation vn-tag strip
+{%     endif %}
+{%     if ethernet_interface.switchport.tool.encapsulation.dot1br_strip is arista.avd.defined(true) %}
+   switchport tool encapsulation dot1br strip
+{%     endif %}
+{%     if ethernet_interface.switchport.tap.allowed_vlan is arista.avd.defined %}
+   switchport tap allowed vlan {{ ethernet_interface.switchport.tap.allowed_vlan }}
+{%     endif %}
+{%     if ethernet_interface.switchport.tool.allowed_vlan is arista.avd.defined %}
+   switchport tool allowed vlan {{ ethernet_interface.switchport.tool.allowed_vlan }}
+{%     endif %}
+{%     if ethernet_interface.switchport.tool.identity.tag is arista.avd.defined %}
+   switchport tool identity {{ ethernet_interface.switchport.tool.identity.tag }}
+{%     endif %}
+{%     if ethernet_interface.switchport.tool.identity.dot1q_dzgre_source is arista.avd.defined %}
+   switchport tool identity dot1q source dzgre {{ ethernet_interface.switchport.tool.identity.dot1q_dzgre_source }}
+{%     elif ethernet_interface.switchport.tool.identity.qinq_dzgre_source is arista.avd.defined %}
+   switchport tool identity qinq source dzgre {{ ethernet_interface.switchport.tool.identity.qinq_dzgre_source }}
+{%     endif %}
+{%     if ethernet_interface.switchport.tap.truncation.enabled is arista.avd.defined %}
+{%         set tap_truncation_cli = "switchport tap truncation" %}
+{%         if ethernet_interface.switchport.tap.truncation.size is arista.avd.defined %}
+{%             set tap_truncation_cli = tap_truncation_cli ~ " " ~ ethernet_interface.switchport.tap.truncation.size %}
+{%         endif %}
+   {{ tap_truncation_cli }}
+{%     endif %}
+{%     if ethernet_interface.switchport.tool.truncation.enabled is arista.avd.defined %}
+{%         set tool_truncation_cli = "switchport tool truncation" %}
+{%         if ethernet_interface.switchport.tool.truncation.size is arista.avd.defined %}
+{%             set tool_truncation_cli = tool_truncation_cli ~ " " ~ ethernet_interface.switchport.tool.truncation.size %}
+{%         endif %}
+   {{ tool_truncation_cli }}
+{%     endif %}
+{%     if ethernet_interface.switchport.tap.default.groups is arista.avd.defined %}
+   switchport tap default group {{ ethernet_interface.switchport.tap.default.groups | arista.avd.natural_sort | join(" group ") }}
+{%     endif %}
+{%     if ethernet_interface.switchport.tap.default.nexthop_groups is arista.avd.defined %}
+   switchport tap default nexthop-group {{ ethernet_interface.switchport.tap.default.nexthop_groups | arista.avd.natural_sort | join(" ") }}
+{%     endif %}
+{%     for interface in ethernet_interface.switchport.tap.default.interfaces | arista.avd.natural_sort %}
+   switchport tap default interface {{ interface }}
+{%     endfor %}
+{%     if ethernet_interface.switchport.tool.groups is arista.avd.defined %}
+{%         set tool_groups = ethernet_interface.switchport.tool.groups | arista.avd.natural_sort | join(" ") %}
+   switchport tool group set {{ tool_groups }}
+{%     endif %}
+{%     if ethernet_interface.switchport.tool.dzgre_preserve is arista.avd.defined(true) %}
+   switchport tool dzgre preserve
+{%     endif %}
 {%     if ethernet_interface.l2_protocol.encapsulation_dot1q_vlan is arista.avd.defined %}
    l2-protocol encapsulation dot1q vlan {{ ethernet_interface.l2_protocol.encapsulation_dot1q_vlan }}
 {%     endif %}
