Feat(eos_cli_config_gen): Extend GRESpan with payload support

--- a/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos-intended-config.j2
+++ b/python-avd/pyavd/_eos_cli_config_gen/j2templates/eos-intended-config.j2
@@ -228,6 +228,7 @@
 {% include 'eos/ipv6-hardware.j2' %}
 {# Monitor Sessions #}
 {% include 'eos/monitor-sessions.j2' %}
+{% include 'eos/monitor_sessions_default_encapsulation_gre.j2' %}
 {# qos #}
 {% include 'eos/qos.j2' %}
 {# eos - priority flow control #}
